WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203145
[GTK][WPE] Fix non-unified builds after
r250857
https://bugs.webkit.org/show_bug.cgi?id=203145
Summary
[GTK][WPE] Fix non-unified builds after r250857
Adrian Perez
Reported
2019-10-18 01:36:14 PDT
I am preparing another of my bi-weekly cleanups to keep the build green with unified builds disabled :-}
Attachments
Patch
(5.54 KB, patch)
2019-10-18 01:48 PDT
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
Patch for landing
(7.27 KB, patch)
2019-10-19 08:41 PDT
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2019-10-18 01:48:27 PDT
Created
attachment 381285
[details]
Patch
Adrian Perez
Comment 2
2019-10-18 02:22:13 PDT
I'll make sure that the normal (unified) build run by the EWS and the bots won't be broken before landing this 👍
Adrian Perez
Comment 3
2019-10-18 06:13:27 PDT
(In reply to Adrian Perez from
comment #2
)
> I'll make sure that the normal (unified) build run by the > EWS and the bots won't be broken before landing this 👍
Marking WebCore/Modules/async-clipboard/ClipboardItemPasteboardDataSource.cpp as @no-unify fixes the issue. It looks like otherwise e.g. both ForwardingHeaders/WebCore/Exception.h and WebCore/dom/Exception.h are included which causes re-definitions of types. I'll poke a bit more at it in case I can come up with a better solution.
Tim Horton
Comment 4
2019-10-18 07:06:18 PDT
Comment on
attachment 381285
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=381285&action=review
> Source/WebCore/ChangeLog:3 > + [GTK][WPE] Fix non-unified builds after
r250857
Do you have an easy way to do a non unified build? This would probably help some of my build time efforts too (at least accelerate getting to a green patch)
> Source/WebCore/Modules/async-clipboard/ClipboardItemPasteboardDataSource.cpp:29 > +#include <WebCore/JSDOMPromiseDeferred.h>
These are in the wrong order
Adrian Perez
Comment 5
2019-10-18 07:23:41 PDT
(In reply to Tim Horton from
comment #4
)
> Comment on
attachment 381285
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=381285&action=review
> > > Source/WebCore/ChangeLog:3 > > + [GTK][WPE] Fix non-unified builds after
r250857
> > Do you have an easy way to do a non unified build? This would probably help > some of my build time efforts too (at least accelerate getting to a green > patch)
For the CMake ports it's enough to pass -DENABLE_UNIFIED_BUILDS=OFF when configuring the build. With the “build-webkit” script that would be: % build-webkit --gtk --cmakeargs=-DENABLE_UNIFIED_BUILDS=OFF (I don't know how to achieve the same with Xcode, sorry about that)
> > Source/WebCore/Modules/async-clipboard/ClipboardItemPasteboardDataSource.cpp:29 > > +#include <WebCore/JSDOMPromiseDeferred.h> > > These are in the wrong order
Yes, I'll reorder them. Somehow “check-webkit-style” did not catch it—I think it's not taking into account the angle brackets and double quote characters for sorting them, maybe. Thanks for pointing this out!
Adrian Perez
Comment 6
2019-10-18 07:30:01 PDT
This also needs a rebase after
r251279
was landed.
Adrian Perez
Comment 7
2019-10-18 13:36:03 PDT
(In reply to Adrian Perez from
comment #3
)
> (In reply to Adrian Perez from
comment #2
) > > I'll make sure that the normal (unified) build run by the > > EWS and the bots won't be broken before landing this 👍 > > Marking WebCore/Modules/async-clipboard/ClipboardItemPasteboardDataSource.cpp > as @no-unify fixes the issue. > > It looks like otherwise e.g. both ForwardingHeaders/WebCore/Exception.h > and WebCore/dom/Exception.h are included which causes re-definitions of > types. I'll poke a bit more at it in case I can come up with a better > solution.
This is solved by using #include "JSDOMPromiseDeferred.h" instead of #include <WebCore/JSDOMPromiseDeferred.h> (Of course!)
Adrian Perez
Comment 8
2019-10-19 08:41:22 PDT
Created
attachment 381372
[details]
Patch for landing
WebKit Commit Bot
Comment 9
2019-10-19 12:56:42 PDT
Comment on
attachment 381372
[details]
Patch for landing Clearing flags on attachment: 381372 Committed
r251326
: <
https://trac.webkit.org/changeset/251326
>
WebKit Commit Bot
Comment 10
2019-10-19 12:56:44 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11
2019-10-19 12:57:13 PDT
<
rdar://problem/56437096
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug